--- a/udp_slave_node/tcp_slave.py.save.1
+++ b/udp_slave_node/tcp_slave.py.save.1
@@ -1,9 +1,11 @@
 import socket
 import time
 import os
+import sys
+import struct
 
-UDP_MASTER_IP = "192.168.111.101"
-UDP_MASTER_PORT = 5010
+TCP_MASTER_IP = "192.168.111.100"
+TCP_MASTER_PORT = 5010
 
 UDP_IP = "192.168.111.100"
 UDP_PORT = 5006
@@ -11,13 +13,12 @@ UDP_PORT = 5006
 UDP_IP_RPI = "192.168.111.99"
 UDP_PORT_RPI = 5009
 
-print "UDP target IP:", UDP_MASTER_IP
-print "UDP target port:", UDP_MASTER_PORT
-print "UDP receive IP:", UDP_IP
-print "UDP receive port:", UDP_PORT
 
-sock_master = socket.socket(socket.AF_INET, socket.SOCK_DGRAM) # UDP
+sock_master = socket.socket(socket.AF_INET, socket.SOCK_STREAM) # UDP
 sock_master.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
+sock_master.bind((TCP_MASTER_IP, TCP_MASTER_PORT))
+sock_master.listen(1)
+connection,addr = sock_master.accept()
 
 sock = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)
 sock.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
@@ -26,9 +27,10 @@ sock.bind((UDP_IP, UDP_PORT))
 sock_slave = socket.socket(socket.AF_INET, socket.SOCK_DGRAM) # UDP
 sock_slave.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
 
-for i in range (0,120):
+for i in range (0,31):
 	sock_slave.sendto("R", (UDP_IP_RPI, UDP_PORT_RPI))
-	print "Sending receiving ack"
+	print "Sent char"
+
 
 	filesize= int(sock.recv(1024))
 	print ("File Size\n",filesize)
@@ -40,24 +42,25 @@ for i in range (0,120):
 					f.write(data)
 	filesize = 0
 	f.close()	
-	print ("Successfully got the file")
+	print ("Successfully get the file")
 
-	sock_master.sendto("M", (UDP_MASTER_IP, UDP_MASTER_PORT))
+	connection.send(struct.pack('c',"M"))
 
 	st = os.stat(filename)
-	sock_master.sendto(str(st.st_size), (UDP_MASTER_IP, UDP_MASTER_PORT))
+	print sys.getsizeof(str(st.st_size))
+	connection.send(struct.pack('L', st.st_size))
 
 	file_master = open(filename,'rb')
 	l = file_master.read(1024)
 	while (l):
-			sock_master.sendto(l, (UDP_MASTER_IP, UDP_MASTER_PORT))
+			connection.send(l)
 			l = file_master.read(1024)
 	file_master.close()
 	print("Sent image\n",i)
 
 print('Done sending')
 	
-sock_master.close()
+connection.close()
 sock.close()
 
 
